# hospital-equipos

./: .gitignore  PRESENTACION.md  README.md  ejecutar_app.bat  ejecutar_app.sh  pyproject.toml  requirements-dev.txt
.kiro/specs/hospital-equipment-management/: .config.kiro  design.md  requirements.md  tasks.md  tasks.meta.json
hospital_equipos/: __init__.py  main.py
hospital_equipos/cli/: __init__.py  menu.py
hospital_equipos/db/: __init__.py  conexion.py  esquema.sql
hospital_equipos/gui/: __init__.py  __main__.py  app.py  controlador.py
hospital_equipos/modelos/: __init__.py  departamento.py  equipo.py  paciente.py  uso.py
hospital_equipos/repositorios/: __init__.py  departamento_repo.py  equipo_repo.py  paciente_repo.py  uso_repo.py
hospital_equipos/servicios/: __init__.py  departamento_service.py  equipo_service.py  paciente_service.py  reporte_service.py  uso_service.py
tests/: conftest.py  test_cli.py  test_conexion.py  test_controlador_gui.py  test_departamento_service.py  test_equipo_service.py  test_paciente_service.py  test_reporte_service.py  test_repositorios.py  test_uso_service.py
