[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hospital-equipos"
version = "0.1.0"
description = "Sistema de Gestión de Equipos Médicos — Hospital Santo Tomás"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "hypothesis>=6.0"]

[tool.setuptools.packages.find]
include = ["hospital_equipos*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra"
